tooling/nargo_cli/tests/snapshots/execution_success/lambda_taking_lambda_regression_8543/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main() -> pub i64 {
    func_3(func_2)
}

unconstrained fn func_2(a: unconstrained fn(u128) -> bool) -> bool {
    a(1)
}

unconstrained fn func_3(_b: unconstrained fn(unconstrained fn(u128) -> bool) -> bool) -> i64 {
    0
}
